<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2016 TIBCO Software,Inc.All rights reserved.
  ~ http://community.jaspersoft.com/project/jaspermobile-android
  ~
  ~ Unless you have purchased a commercial license agreement from TIBCO Jaspersoft,
  ~ the following license terms apply:
  ~
  ~ This program is part of TIBCO Jaspersoft Mobile for Android.
  ~
  ~ TIBCO Jaspersoft Mobile is free software:you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser General Public License as published by
  ~ the Free Software Foundation,either version 3of the License,or
  ~ (at your option)any later version.
  ~
  ~ TIBCO Jaspersoft Mobile is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY;without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License
  ~ along with TIBCO Jaspersoft Mobile for Android.If not,see
  ~ <http://www.gnu.org/licenses/lgpl>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/saveReport"
        android:icon="@drawable/ic_menu_save"
        android:title="@string/rv_ab_save_report"
        app:showAsAction="never" />

    <item
        android:id="@+id/favoriteAction"
        android:icon="@drawable/ic_menu_star_outline"
        android:title="@string/r_cm_add_to_favorites"
        app:showAsAction="always" />

    <item
        android:id="@+id/aboutAction"
        android:icon="@drawable/ic_menu_info"
        android:title="@string/r_cm_view_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/shareAction"
        android:icon="@drawable/ic_menu_share_selector"
        android:title="@string/r_cm_share"
        app:showAsAction="ifRoom" />

</menu>