...

    <!-- Search Activity -->
    <string name="s_hint">Search resources</string>
    <string name="s_saved_items_hint">Search saved files</string>

    <!-- Action Bar -->
    <string name="s_ab_filter_by">Filter by</string>
    <string name="s_ab_sort_by">Sort by</string>

    <!-- File viewing -->
    <!--TODO Remove!-->
    <string name="fv_try_again_btn">Try again</string>
    <string name="fv_can_not_show_message">Can not show file content</string>
...
    <string name="fv_undefined_message">Can not open. Resource type undefined</string>
    <!--TODO Remove!-->
    <string name="fv_opening_message">Opening file...</string>

    <!-- Filter Dialog -->
    <string name="s_fd_option_all">All</string>
    <string name="s_fd_option_reports">Reports</string>
    <string name="s_fd_option_saved_values">Saved values</string>
    <string name="s_fd_option_dashboards">Dashboards</string>
    <string name="s_fd_option_files">Files</string>
    <!--TODO Remove!-->
    <string name="s_fd_option_others">Others</string>
    <string name="s_fd_sort_label">Label</string>
...
    <string name="sr_error_field_is_empty">This field is required.</string>
    <string name="sr_error_characters_not_allowed">The following characters are not allowed: * \\ / \" \' : ? | &lt; > + [ ]</string>
    <string name="sr_error_report_exists">A file with this name already exists.</string>

    <!-- Favorites activity -->
    <string name="f_title">Favorites</string>
    <string name="f_empty_list_msg">No favorite items</string>

    <!-- Saved Files Activity -->
    <string name="sdr_ab_title">Saved Files</string>
    <string name="sdr_ab_list_msg">No saved files</string>
    <string name="sdr_saving_multiply_msg">%1$s reports downloading</string>
    <string name="sdr_starting_downloading_msg">Starting downloading…</string>
...
    <string name="failed_load_data">Failed to load data!</string>
    <string name="authenticator_label">Jasper accounts</string>
    <string name="wrong_action">Can not perform this action</string>
    <string name="no_network">There was a network error.</string>
    <string name="request_was_cancelled_explicitly">Cancelled</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="voice_command_btn">Voice command</string>
    <string name="voice_command_title">Say some command</string>
    <string name="voice_command_undefined">Can not recognize command</string>
    <string name="voice_command_help">You can use voice commands to interact with resources. Two commands are supported: "run" and "find". For instance, you can say "run" with resource name to start report execution.</string>
    <string name="voice_command_not_show_again">Don\'t show again</string>

...
